# project-examples

./: README.md
cmake-application/: CMakeLists.txt  README.md  build-linux-x86.sh  build.sh
cmake-application-using-dynamic-library/: CMakeLists.txt  README.md
cmake-application-using-dynamic-library/build-linux-x86/: CMakeCache.txt  Makefile  cmake_install.cmake  main
cmake-application-using-static-library/: CMakeLists.txt
cmake-application-using-static-library/build-linux-x86/: CMakeCache.txt  Makefile  cmake_install.cmake  main
cmake-application-using-static-library/include/: libCalcInterExtraPolation.hpp
cmake-application-using-static-library/src/: main.cpp
cmake-application/include/: hello-app.hpp
cmake-application/src/: hello-app.cpp  hello.cpp
cmake-dynamic-library/: CMakeLists.txt  README.md  build-linux-x86.sh
cmake-dynamic-library/build-linux-x86/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
cmake-dynamic-library/include/: my_library.hpp
cmake-dynamic-library/my_library/: mylibrary.cpp
cmake-dynamic-library/src/: CMakeLists.txt  main.cpp
cmake-static-library/: CMakeLists.txt  README.md
cmake-static-library/build-linux-x86/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake-static-library/include/: libCalcInterExtraPolation.hpp
cmake-static-library/libCalcInterExtraPolation/: libCalcInterExtraPolation.cpp
cmake-static-library/src/: main.cpp
demo-company-employee/: README.md
demo-company-employee/src/: Main.cpp
demo-medical-device/: Application.c  README.md
demo-mvc-device/: README.md
(+39 files in other folders)
